--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -30,3 +30,32 @@
     width: 45%;
     overflow: hidden;
 }
+
+@media only screen and (max-width: 960px) {
+    .about-countainer{
+        flex-direction: column;
+        padding: 0;
+        height: auto;
+    }
+    .about-desc {
+        width: 90%;
+        margin: 0 auto;
+        padding: 40px 20px 50px 20px;
+    }
+    .about-desc > h3 {
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .about-img {
+        width: 75%;
+        margin: 0 auto;
+        margin-block-end: 50px;
+        
+        
+    } 
+
+    .about-img > img {
+        width: 75%;        
+    }
+}
