--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -26,3 +26,15 @@
     font-size: 32px;
     margin-top: 5px;
 }
+
+@media only screen and (max-width: 960px){
+    .cover-container > h1{
+        font-size: 70px;
+        text-align: center;
+    }
+    .cover-container > p{
+        text-align: center;
+        font-size: 20px;
+        width: 85%;
+    }
+}
