--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -80,3 +80,23 @@
 .BrainhubCarousel__arrows:hover > span {
     border-color: black !important;
 }
+
+@media only screen and (max-width: 960px) {
+    .carousel-container {
+        flex-direction: column;
+    }
+    .carousel-tittle {
+        width: 100%;
+        text-align: center;
+        font-size: 25px;
+        padding: 50px 0 50px 0;
+    }
+
+    .slide-container{
+        width: 100%;
+        height: auto;
+        padding: 0;  
+            
+    }
+    
+}
