--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -1,38 +1,41 @@
-.cover-container{
+.cover-container {
     height: 100vh;
     object-fit: contain;
-    box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.5);
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
-.video{
+
+.video {
     object-fit: cover;
     height: 100vh;
     width: 100%;
     position: absolute;
     z-index: -1;
-    
+
 }
 
-.cover-container > h1{
+.cover-container>h1 {
     color: white;
     font-size: 100px;
 }
-.cover-container > p{
+
+.cover-container>p {
     color: white;
     font-size: 32px;
     margin-top: 5px;
 }
 
-@media only screen and (max-width: 960px){
-    .cover-container > h1{
+@media only screen and (max-width: 960px) {
+    .cover-container>h1 {
         font-size: 70px;
         text-align: center;
     }
-    .cover-container > p{
+
+    .cover-container>p {
         text-align: center;
         font-size: 20px;
         width: 85%;
