--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -20,18 +20,35 @@
 
 .cover-container>h1 {
     color: white;
-    font-size: 100px;
+    font-size: 120px;
 }
 
-.cover-container>p {
+.cover-container>h2 {
     color: white;
-    font-size: 32px;
+    font-size: 40px;
     margin-top: 5px;
+}
+
+.cover-container>h3 {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    margin-top: 5px;
+        
 }
 
 @media only screen and (max-width: 960px) {
     .cover-container>h1 {
-        font-size: 70px;
+        font-size: 60px;
+        text-align: center;
+    }
+
+    .cover-container>h2 {
+        font-size: 30px;
+        text-align: center;
+    }
+
+    .cover-container>h3 {
+        font-size: 15px;
         text-align: center;
     }
 
