--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -3,7 +3,7 @@
     flex-direction: initial;
     align-items: center;
     background-color: black;
-    padding: 30px 0 30px 0;
+    padding: 20px 0 30px 0;
 
 }
 
@@ -24,7 +24,7 @@
     display: flex;
 }
 
-.slide-container>img {
+/*.slide-container > img {
     object-fit: contain;
     transition: 0.5s;
 }
@@ -32,6 +32,12 @@
 .slide-container:hover>img {
     transform: scale(1.1);
     opacity: 0.7;
+}*/
+
+.img {
+    object-fit: contain;
+    transition: 0.5s;
+    display: flex;
 }
 
 .slide-desc {
@@ -39,34 +45,56 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 70%;
-    padding-left: 30px;
-    border-top-left-radius: 20px;
+    padding: 20px 20px 20px 20px;
+    border-top-left-radius: 35px;
     opacity: 0.7;
+    
 }
 
 .slide-desc>span {
     color: white;
     display: block;
     font-size: 22px;
-    padding: 20px 0 5px 10px;
+    padding: 0px 3 0px 0px;
     text-align: left;
 }
 
-.slide-desc>p {
-    color: white;
-    display: block;
+.slide-desc > a {
+    color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 15px;
-    padding: 1px 0 10px 10px;
+    font-size: 15px;    
+}
+
+.slide-link > .github {
+    color: rgb(247, 247, 247);
+    font-size: 30px;
+    padding: 3px;
+    border-radius: 50%;
+    background-color: #000000;
+    transition: 0.7s;
+}
+
+.github:hover {
+    background-color: #ffffff;   
+}
+
+.slide-video > .film {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    padding: 3px;
+    border-radius: 30%;
+    transition: 0.7s;
+}
+
+.film:hover {
+    background-color: #ffffff;   
+    color : #000000;
 }
 
 .BrainhubCarousel__arrows {
     background-color: white;
     border-radius: 50%;
     margin: 20px;
-
-
 }
 
 .BrainhubCarousel__arrows>span {
