--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,3 +20,39 @@
     color: white;
     cursor: pointer;
 }
+
+.navbar-logo > .user{
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    border-radius: 100px;
+    transition: 0.7s;
+    padding: 7px;
+}
+
+.user:hover {
+    background-color: #ffffff;   
+    color : #000000;
+
+}
+
+@media only screen and (max-width: 960px) {
+    .navbar-logo > .user{
+        font-size: 20px;
+    }
+
+    .navbar {
+        position: fixed;
+        top: 0;
+        background-color: transparent;
+        width: 100%;
+        height: 60px;
+        padding-left: 50px;
+        font-size: 0px;          
+    }
+
+    .scrolling {
+        background-color: black;
+        transition: all 0.5s ease;
+    }
+
+}
