--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -24,20 +24,20 @@
     display: flex;
 }
 
-/*.slide-container > img {
-    object-fit: contain;
-    transition: 0.5s;
-}
-
-.slide-container:hover>img {
-    transform: scale(1.1);
-    opacity: 0.7;
-}*/
-
 .img {
     object-fit: contain;
     transition: 0.5s;
     display: flex;
+}
+
+.slide-container > .img {
+    object-fit: contain;
+    transition: 0.5s;
+}
+
+.slide-container:hover > .img {
+    transform: scale(1.1);
+    opacity: 0.7;
 }
 
 .slide-desc {
@@ -51,7 +51,7 @@
     
 }
 
-.slide-desc>span {
+.slide-desc > span {
     color: white;
     display: block;
     font-size: 22px;
@@ -111,7 +111,7 @@
 
 @media only screen and (max-width: 960px) {
     .carousel-container {
-        flex-direction: column;
+        flex-direction: column;  
     }
 
     .carousel-tittle {
@@ -127,5 +127,35 @@
         padding: 0;
 
     }
+
+    .slide-container {
+        height: 50%;
+        border-radius: 40px;
+        overflow: hidden;
+        position: relative;
+        cursor: pointer;
+        display: flex;
+    }
+    
+    .img {
+        object-fit: contain;
+        transition: 0.5s;
+        display: flex;
+    }
+
+    .carousel-tittle {
+        width: 100%;
+        text-align: center;
+        font-size: 25px;
+        padding: 50px 0 50px 0;
+    }
+
+    .carousel-container {
+        align-items: center;
+        background-color: black;
+        padding: 0px 0 0px 0;    
+    }
+    
+    
 
 }
