--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -40,6 +40,29 @@
     align-items: center;
 }
 
+.btn {
+    -webkit-transition-duration: 0.4s; 
+    transition-duration: 0.4s;
+    background-color: rgb(255, 255, 255);
+    border-color: white;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+    padding: 20px;
+    font-size: 25px;
+    margin: 0 20px;
+    cursor: pointer;    
+}
+
+.fas:hover, .a:hover {
+    background-color:#000000;  
+    color: white;     
+}
+
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: rgb(0, 0, 0);
+}
+
 .sns-links {
     display: flex;
     justify-content: space-evenly ;
@@ -47,20 +70,18 @@
     padding: 0 100px 0 100px;
 }
 
-.linkedin,
-.github {
-    color: white;
-    font-size: 28px;
-    padding: 8px;
-    border-radius: 50%;
-    background-color: #1c1c1c;
-    transition: 0.5s;
+.github , .linkedin {
+    background-color:#000000;  
+    color: white; 
+    font-size: 30px;
+    padding: 3px;
+    border-radius: 30%;
+    transition: 0.7s;
 }
 
-.linkedin:hover,
-.github:hover {
-    transform: scale(1.1);
-    opacity: 0.7;
+.github:hover, .linkedin:hover {
+    background-color: rgb(255, 255, 255);
+    border-color: white;
     color: rgb(0, 0, 0);
 }
 
