--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -40,12 +40,12 @@
     align-items: center;
 }
 
-.btn {
+.btn{
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
-    background-color: rgb(255, 255, 255);
-    border-color: white;
-    color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 20px;
     font-size: 25px;
@@ -54,13 +54,24 @@
 }
 
 .fas:hover, .a:hover {
-    background-color:#000000;  
-    color: white;     
+    background-color:#ffffff;  
+    color: rgb(0, 0, 0);     
 }
 
 a:link, a:visited, a:active {
     text-decoration:none;
+}
+
+.btn-text {
+    color: rgb(255, 255, 255);
+    font-size: 25px;
+    padding: 20px;
+}
+
+.btn-text:hover {
     color: rgb(0, 0, 0);
+    font-size: 25px;
+    padding: 20px;
 }
 
 .sns-links {
