--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -15,6 +15,10 @@
     padding: 30px 0 30px 50px;
     width: 70%;
     margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(1,  1fr);
+    gap: 20px;
+    max-width: 40%;
 }
 
 .footer-info>h1 {
@@ -44,34 +48,24 @@
     -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
     background-color: rgb(0, 0, 0);
-    border-color: rgb(255, 255, 255);
-    color: rgb(255, 255, 255);
+    color: white;
     border-radius: 10px;
-    padding: 20px;
-    font-size: 25px;
-    margin: 0 20px;
+    padding: 20px 40px 20px 40px; 
+    font-size: 20px;
+    margin: 0 20px 0 50px ;
     cursor: pointer;    
+    border: 3px solid white;  
+    
+
 }
 
-.fas:hover, .a:hover {
+.fas:hover , .fab:hover , .far:hover , .fas:hover {
     background-color:#ffffff;  
-    color: rgb(0, 0, 0);     
+    color: rgb(0, 0, 0);
 }
 
 a:link, a:visited, a:active {
     text-decoration:none;
-}
-
-.btn-text {
-    color: rgb(255, 255, 255);
-    font-size: 25px;
-    padding: 20px;
-}
-
-.btn-text:hover {
-    color: rgb(0, 0, 0);
-    font-size: 25px;
-    padding: 20px;
 }
 
 .sns-links {
@@ -108,6 +102,9 @@ a:link, a:visited, a:active {
         text-align: center;
         padding: 0;
         font-size: 20px;
+        width: 100%;
+        max-width: 100%;
+
     }
 
     .footer-contact {
@@ -129,5 +126,10 @@ a:link, a:visited, a:active {
 
     .sns-links {
         padding: 0 60px 0 60px;
+    }
+
+    .btn {
+        font-size: 20px;
+        padding: 10px;
     }
 }
