--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -23,6 +23,7 @@
 
 .footer-info>h1 {
     padding-bottom: 15px;
+    
 }
 
 .footer-contact {
@@ -92,9 +93,17 @@ a:link, a:visited, a:active {
 
 .design-by {
     font-size: 20px;
-    padding: 10px;
+    padding: 10px 0 10px 50px;
     color: white;
-    padding: 0 50px 0 50px;
+    
+}
+
+.footer-contact > p{
+    font-size: 20px;
+    padding: 10px 20px 50px 20px;
+    text-align: left;
+    text-justify: auto;
+    
 }
 
 @media only screen and (max-width: 960px) {
@@ -105,6 +114,10 @@ a:link, a:visited, a:active {
         width: 100%;
         max-width: 100%;
 
+    }
+
+    .footer-info>h1 {
+        text-align: center;
     }
 
     .footer-contact {
