--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -122,7 +122,7 @@ a:link, a:visited, a:active {
         text-align: center;
     }
 
-    .footer-contact {
+    .footer-contact > p{
         font-size: 16px;
         padding: auto;
         text-align: left;
