--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -10,13 +10,20 @@
     left: 0;
 }
 
+.btn-texto {
+    color: white;
+    font-size: 23px;
+    font-weight: bold;
+    text-align: center;
+}
+
 .footer-info {
     font-size: 25px;
     padding: 30px 0 30px 50px;
     width: 70%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(1,  1fr);
+    grid-template-columns: repeat(1fr);
     gap: 20px;
     max-width: 40%;
     text-align: center;
@@ -55,10 +62,10 @@
     cursor: pointer;    
     border: 3px solid white;  
     
-
 }
 
-.fas:hover , .fab:hover , .far:hover , .fas:hover {
+
+.fas:hover , .fab:hover , .far:hover , .fas:hover, .fa-brands:hover, .fa-linkedin:hover, .btn-texto:hover{
     background-color:#ffffff;  
     color: rgb(0, 0, 0);
 }
