diseño responsive footer

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -27,7 +27,7 @@
     grid-template-columns: repeat(1fr);
     gap: 20px;
     max-width: 40%;
-    text-align: center;
+    text-align: center;       
 }
 
 .footer-info>h1 {
@@ -120,16 +120,14 @@ a:active {
 @media only screen and (max-width: 960px) {
     .footer-info {
         text-align: center;
-        padding: 10px 0 5px 0;
+        padding: 20px 20px 0px 0px;
         font-size: 20px;
         width: 100%;
         max-width: 100%;
-
     }
 
     .footer-info>h1 {
-
-        padding: 10px 0 5px 0;
+        padding: 10px 0px 10px 0;
     }
 
     .footer-sns {
