--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -4,13 +4,13 @@
     background-color: white;
     color: black;
     z-index: -2;
-
 }
 
 .info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    padding: 50px;
     height: 100%;
 }
 
@@ -23,5 +23,10 @@
     .info > h1 {
         text-align: center;
         font-size: 28px;
+    }
+
+    .info {
+        padding: 30px;
+        height: 100%;
     }
 }
