--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -14,9 +14,9 @@
     padding: 0 100px 0 100px;
 }
 
-.about-desc>h3 {
+.about-desc>h1 {
     margin-bottom: 30px;
-    font-size: 35px;
+    font-size: 40px;
 }
 
 .about-desc>p {
@@ -31,6 +31,9 @@
     overflow: hidden;
 }
 
+.about-img>img {
+    border-radius: 30px;
+}
 @media only screen and (max-width: 960px) {
     .about-countainer {
         flex-direction: column;
@@ -44,7 +47,7 @@
         padding: 40px 20px 50px 20px;
     }
 
-    .about-desc>h3 {
+    .about-desc>h1 {
         font-size: 25px;
         text-align: center;
     }
