--- a/src/components/cover/Cover.css
+++ b/src/components/cover/Cover.css
@@ -1,5 +1,5 @@
 .cover-container {
-    height: 100vh;
+    height: 60vh;
     object-fit: contain;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
     display: flex;
@@ -11,7 +11,7 @@
 
 .video {
     object-fit: cover;
-    height: 100vh;
+    height: 60vh;
     width: 100%;
     position: absolute;
     z-index: -1;
@@ -20,17 +20,17 @@
 
 .cover-container>h1 {
     color: white;
-    font-size: 120px;
+    font-size: 70px;
 }
 
 .cover-container>h2 {
-    color: white;
-    font-size: 40px;
+    color: rgba(255, 255, 255, 0.775);
+    font-size: 30px;
     margin-top: 5px;
 }
 
 .cover-container>h3 {
-    color: rgb(255, 255, 255);
+    color: rgba(255, 255, 255, 0.775);
     font-size: 20px;
     margin-top: 5px;
         
@@ -38,17 +38,17 @@
 
 @media only screen and (max-width: 960px) {
     .cover-container>h1 {
-        font-size: 60px;
+        font-size: 40px;
         text-align: center;
     }
 
     .cover-container>h2 {
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
     }
 
     .cover-container>h3 {
-        font-size: 15px;
+        font-size: 13px;
         text-align: center;
     }
 
@@ -56,5 +56,9 @@
         text-align: center;
         font-size: 20px;
         width: 85%;
+    }
+
+    .cover-container {
+        height: 40vh;
     }
 }
