--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,7 +3,6 @@
     height: 100%;
     background-color: black;
     color: white;
-
     z-index: -2;
     bottom: 0;
     left: 0;
@@ -24,6 +23,7 @@
     grid-gap: 20px;
     align-items: center;
     justify-content: center;
+    padding: 40px;
 }
 
 .footer>h1 {
@@ -31,11 +31,9 @@
     font-size: 40px;
     font-weight: bold;
     text-align: center;
-    padding: 50px 200px 20px 0px;
+    padding: 20px 200px 0px 0px;
 
 }
-
-
 
 .footer-sns {
     width: 70%;
@@ -87,7 +85,7 @@ a:active {
     background-color: #000000;
     color: white;
     font-size: 30px;
-    padding: 3px;
+    padding: 5px;
     border-radius: 30%;
     transition: 0.7s;
 }
@@ -102,9 +100,9 @@ a:active {
 .design-by {
     font-size: 15px;
     text-align: center;
-    padding: 100px 0 5px 0;
-    color: white;
-
+    padding: 20px 0 5px 0;
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
 }
 
 .sns-links {
@@ -113,19 +111,20 @@ a:active {
     align-items: center;
     height: 100%;
     padding: 10px 0 5px 0;
+    background-color: #ffffff;
+}
+
+.sns-links>a {
+    padding: 0 5px 0 5px;
 }
 
 @media only screen and (max-width: 960px) {
     .footer-info {
         text-align: center;
-        padding: 20px 20px 0px 0px;
+        padding: 20px 20px 20px 20px;
         font-size: 20px;
         width: 100%;
         max-width: 100%;
-    }
-
-    .footer>h1 {
-        padding: 10px 0px 10px 0;
     }
 
     .footer-sns {
@@ -135,7 +134,7 @@ a:active {
     }
 
     .design-by {
-        padding: 50px 0 0px 0;
+        padding: 10px 0 0px 0;
         text-align: center;
     }
 
