--- a/src/components/info/Info.css
+++ b/src/components/info/Info.css
@@ -1,32 +1,42 @@
 .info-container {
-    width: 100%;
-    height: 200px;
-    background-color: white;
-    color: black;
-    z-index: -2;
+    height: 60vh;
+    object-fit: contain;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .info {
-    display: grid;
-    grid-template-columns: 1fr;
     text-align: center;
-    padding: 50px;
-    height: 100%;
+}
+
+.info>h1 {
+    font-size: 35px;
+    padding: 5px;
+}
+
+.info>h2 {
+    font-size: 25px;
+    padding: 5px;
 }
 
 @media only screen and (max-width: 960px) {
+
     .info-container {
-        height: 200px;
-        width: 100%;
+        height: 30vh;
     }
 
     .info > h1 {
         text-align: center;
         font-size: 28px;
+        padding: 5px;
     }
 
-    .info {
-        padding: 30px;
-        height: 100%;
+    .info>h2 {
+        text-align: center;
+        font-size: 20px;
+        padding: 5px;
     }
+
 }
