--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,12 +1,16 @@
+/* General Navbar */
 .navbar {
     position: fixed;
     top: 0;
     background-color: transparent;
     width: 100%;
     height: 80px;
-    padding-left: 50px;
+    padding: 0 50px;
     font-size: 20px;
-    z-index: 1;    
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .scrolling {
@@ -14,45 +18,106 @@
     transition: all 0.5s ease;
 }
 
+/* Logo */
 .navbar-logo {
-    height: 80px;
-    line-height: 80px;
     color: white;
     cursor: pointer;
 }
 
-.navbar-logo > .user{
+.navbar-logo>.user {
     font-size: 25px;
-    color: rgb(255, 255, 255);
     border-radius: 100px;
     transition: 0.7s;
-    padding: 7px;
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    margin: 0 2px 0 5px;
+    cursor: pointer;
 }
 
 .user:hover {
-    background-color: #ffffff;   
-    color : #000000;
-
+    background-color: #ffffff;
+    color: #000000;
 }
 
+/* Menu */
+.navbar-menu {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-menu li {
+    font-weight: 600;
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+    transition: color 0.3s;
+    border-radius: 10px;
+    padding: 5px 10px 5px 10px;
+    margin: 0 2px 0 5px;
+    cursor: pointer;
+}
+
+.navbar-menu li:hover {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.navbar-toggle {
+    display: none;
+}
+
+
+/* Mobile */
 @media only screen and (max-width: 960px) {
-    .navbar-logo > .user{
-        font-size: 20px;
-    }
-
     .navbar {
-        position: fixed;
-        top: 0;
-        background-color: transparent;
-        width: 100%;
         height: 60px;
-        padding-left: 50px;
-        font-size: 0px;          
+        padding: 0 20px;
     }
 
-    .scrolling {
+    .navbar-menu {
+        display: none;
+        /* Oculta el menú por defecto */
+        flex-direction: column;
+        /* Alinea verticalmente las opciones */
+        position: absolute;
+        top: 60px;
+        /* Debajo del navbar */
+        right: 0;
         background-color: black;
-        transition: all 0.5s ease;
+        width: 100%;
+        gap: 10px;
+        padding: 10px 0;
+        z-index: 2;
     }
 
+    .navbar-menu.active {
+        display: flex;
+        /* Muestra el menú al activarse */
+    }
+
+    .navbar-menu li {
+        font-size: 16px;
+        text-align: center;
+        padding: 10px 0;
+    }
+
+    .navbar-toggle {
+        font-size: 25px;
+        color: white;
+        display: block;
+        transition: 0.7s;
+        border-radius: 10px;
+        padding: 5px 10px 5px 10px;
+        margin: 0 2px 0 5px;
+        cursor: pointer;
+        display: block;
+    }
+
+    .navbar-toggle:hover {
+        background-color: #ffffff;
+        color: #000000;
+    }
 }
