--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,6 +1,6 @@
 .carousel-container {
     display: flex;
-    flex-direction: initial;
+    flex-wrap: wrap;
     align-items: center;
     background-color: black;
     padding: 20px 0 30px 0;
@@ -11,8 +11,11 @@
     color: white;
     width: 40%;
     text-align: center;
-    font-size: 30px;
     padding: 0 100px 0 100px;
+}
+
+.carousel-tittle > h1 {
+    font-size: 40px;
 }
 
 .slide-container {
