--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -7,15 +7,41 @@
 
 }
 
-.carousel-tittle {
+.carousel-title {
     color: white;
-    width: 40%;
-    text-align: center;
-    padding: 0 100px 0 100px;
+    width: 100%;
+    text-align: left;
+    padding: 0 100px 35px 100px;
 }
 
-.carousel-tittle > h1 {
+
+.carousel-title>h1 {
     font-size: 40px;
+}
+
+.carousel-title>h2 {
+    font-size: 25px;
+    margin-top: 25px;
+    padding: 0 30px 25px 30px;
+    text-align: left;
+}
+
+.carousel-title p {
+    font-size: 20px;
+    line-height: 1.6;
+    color: #d2d2d2;
+    padding: 0 40px 0 50px;
+}
+
+.carousel-title a {
+    color: #007BFF;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.carousel-title a:hover {
+    text-decoration: underline;
+    color: #0056b3;
 }
 
 .slide-container {
@@ -27,13 +53,47 @@
     display: flex;
 }
 
+.slide-container-cipax {
+    height: 100%;
+    width: 100%;
+    border-radius: 40px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    display: flex;
+}
+
+
+
 .img {
     object-fit: contain;
     transition: 0.5s;
-    display: flex;  
+    display: flex;
 }
 
-.slide-container:hover > .img {
+.imgCipax {
+    object-fit: contain;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center
+}
+
+.slide-container:hover>.img {
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+
+.slide-container:hover>.imgCipax {
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+
+.slide-container-cipax:hover>.img {
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+
+.slide-container-cipax:hover>.imgCipax {
     transform: scale(1.1);
     opacity: 0.7;
 }
@@ -46,10 +106,10 @@
     padding: 20px 20px 20px 20px;
     border-top-left-radius: 35px;
     opacity: 0.7;
-    
+
 }
 
-.slide-desc > span {
+.slide-desc>span {
     color: white;
     display: block;
     font-size: 22px;
@@ -57,13 +117,13 @@
     text-align: left;
 }
 
-.slide-desc > a {
+.slide-desc>a {
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: 15px;    
+    font-size: 15px;
 }
 
-.slide-link > .github {
+.slide-link>.github {
     color: rgb(247, 247, 247);
     font-size: 30px;
     padding: 3px;
@@ -73,10 +133,10 @@
 }
 
 .github:hover {
-    background-color: #ffffff;   
+    background-color: #ffffff;
 }
 
-.slide-video > .film {
+.slide-video>.film {
     color: rgb(255, 255, 255);
     font-size: 30px;
     padding: 3px;
@@ -85,8 +145,12 @@
 }
 
 .film:hover {
-    background-color: #ffffff;   
-    color : #000000;
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.BrainhubCarousel__container {
+    padding-block-end: 40px;
 }
 
 .BrainhubCarousel__arrows {
@@ -109,21 +173,26 @@
 
 @media only screen and (max-width: 960px) {
     .carousel-container {
-        flex-direction: column;  
+        flex-direction: column;
     }
 
-    .carousel-tittle {
+    .carousel-title {
         width: 100%;
         text-align: center;
         font-size: 25px;
         padding: 0 0 0 0;
     }
-    
+
     .img {
-        object-fit: scale-down;  
-        transition: none;  
+        object-fit: scale-down;
+        transition: none;
     }
-    
+
+    .imgCipax {
+        object-fit: scale-down;
+        transition: none;
+    }
+
     .slide-container {
         height: 50%;
         border-radius: 40px;
@@ -133,10 +202,35 @@
         display: flex;
     }
 
-    .slide-container:hover > .img {
-        transform:none;
-        opacity: 0.7;        
+    .slide-container:hover>.img {
+        transform: none;
+        opacity: 0.7;
     }
+
+    .slide-container:hover>.imgCipax {
+        transform: none;
+        opacity: 0.7;
+    }
+
+    .slide-container-cipax {
+        height: 300px;
+        width: 300px;
+        border-radius: 40px;
+        overflow: hidden;
     
+        cursor: pointer;
+        display: flex;
+    }
+
+    .slide-container-cipax:hover>.img {
+        transform: none;
+        opacity: 0.7;
+    }
+
+    .slide-container-cipax:hover>.imgCipax {
+        transform: none;
+        opacity: 0.7;
+    }
+
 
 }
