--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -54,16 +54,18 @@
 }
 
 .slide-container-cipax {
-    height: 100%;
+    height: 40dvh;
     width: 100%;
     border-radius: 40px;
     overflow: hidden;
     position: relative;
     cursor: pointer;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+
 }
-
-
 
 .img {
     object-fit: contain;
@@ -71,30 +73,20 @@
     display: flex;
 }
 
-.imgCipax {
+.slide-container:hover>.img {
+    transform: scale(1.1);
+    opacity: 0.7;
+}
+
+.imgCipax{
     object-fit: contain;
     transition: 0.5s;
     display: flex;
     justify-content: center
 }
 
-.slide-container:hover>.img {
-    transform: scale(1.1);
-    opacity: 0.7;
-}
-
-.slide-container:hover>.imgCipax {
-    transform: scale(1.1);
-    opacity: 0.7;
-}
-
-.slide-container-cipax:hover>.img {
-    transform: scale(1.1);
-    opacity: 0.7;
-}
-
 .slide-container-cipax:hover>.imgCipax {
-    transform: scale(1.1);
+    transform: scale(1.8);
     opacity: 0.7;
 }
 
@@ -106,7 +98,6 @@
     padding: 20px 20px 20px 20px;
     border-top-left-radius: 35px;
     opacity: 0.7;
-
 }
 
 .slide-desc>span {
@@ -115,6 +106,7 @@
     font-size: 22px;
     padding: 0px 3 0px 0px;
     text-align: left;
+    margin: 8px;
 }
 
 .slide-desc>a {
@@ -150,7 +142,7 @@
 }
 
 .BrainhubCarousel__container {
-    padding-block-end: 40px;
+    padding-block-end: 40px;   
 }
 
 .BrainhubCarousel__arrows {
@@ -160,7 +152,7 @@
 }
 
 .BrainhubCarousel__arrows>span {
-    border-color: black;
+    border-color: black;  
 }
 
 .BrainhubCarousel__arrows:hover {
@@ -176,16 +168,60 @@
         flex-direction: column;
     }
 
+    .carousel-container h2 {
+        font-size: 25px;
+    }
+
+    .carousel-container h3 {
+        font-size: 20px;
+    }
+    
     .carousel-title {
         width: 100%;
         text-align: center;
-        font-size: 25px;
         padding: 0 0 0 0;
+        
+    }
+    .about-desc p {
+        font-size: 15px;
+    }
+
+    .about-desc {
+        padding: 30px 0 30px 0;
+    }
+
+    .carousel-title p {
+        font-size: 15px;
+    }
+
+    .slide-desc>span {
+        font-size: 12px;
+        padding: 0px 3 0px 0px;
+    }
+
+    .slide-desc{
+        font-size: 12px;
+        padding: 0px 1rem 0px 2rem;
+    }
+
+    .slide-link>.github{
+        font-size: 20px;
+    }
+
+    .slide-video>.film{
+        font-size: 20px;
     }
 
     .img {
         object-fit: scale-down;
         transition: none;
+        height: 100%;
+    }
+    .carousel-title.cipax p {
+        font-size: 15px;
+        line-height: 1.5;
+        color: #d2d2d2;
+        padding: 0 0px 90px 0px;
     }
 
     .imgCipax {
@@ -195,6 +231,7 @@
 
     .slide-container {
         height: 50%;
+        width: 100%;
         border-radius: 40px;
         overflow: hidden;
         position: relative;
@@ -213,7 +250,7 @@
     }
 
     .slide-container-cipax {
-        height: 300px;
+        height: 250px;
         width: 300px;
         border-radius: 40px;
         overflow: hidden;
